--- a/src/components/10-practice/practice.scss
+++ b/src/components/10-practice/practice.scss
@@ -1,99 +1,77 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  
-  body, html {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #f0f0f0;
-  }
-  
-  .card-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-  }
-  
-  .card {
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-    overflow: hidden;
-    position: relative;
-  
-    .card-top {
+@import url("https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap");
+
+.profile-card-container1 {
+  font-family: "Crimson Text", sans-serif;
+  border: 5px solid rgb(197, 197, 197);
+  width: 350px;
+  overflow: hidden;
+  margin: 4rem auto;
+
+  .header1 {
+    height: 200px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    &::before {
+      content: "";
+      background-color: rgba(165, 0, 0, 0.628);
+      display: block;
       width: 100%;
-  
-      .cover-image {
-        width: 100%;
-        height: auto;
-      }
+      height: 100%;
+    }
+  }
+
+  .content1 {
+    text-align: center;
+    top: -75px;
+    position: relative;
+
+    .avatar1 {
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      -ms-border-radius: 50%;
+      -o-border-radius: 50%;
+      margin: 0 auto;
+}
+
+    h3{
+      margin: 0;
+      font-size: 2.5rem;
+    }
+
+    h5 {
+      margin: 0;
+      font-size: 1.2rem;
+      color: gray;
+  }
+
+    .stats{
+      display: flex;
+      justify-content: space-evenly;
+      margin-top: 2rem;
+
+      
+      h2 {
+        font-size: 2rem;
+        margin: 0;
+        font-weight: 400;
+    }
+
+    span {
+        color: gray;
+    }
+
+
     }
     
-  
-    .card-middle {
-      position: absolute;
-      top: 150px;
-      display: flex;
-      justify-content: center;
-      width: 100%;
-  
-      .profile-image {
-        width: 120px;
-        height: 120px;
-        border-radius: 50%;
-        border: 4px solid #fff;
-      }
-    }
-  
-    .card-bottom {
-      margin-top: 60px;
-      text-align: center;
-      padding: 20px;
-  
-      .title {
-        margin-bottom: 20px;
-  
-        div {
-          font-size: 1.5rem;
-          font-weight: bold;
-        }
-  
-        span {
-          display: block;
-          font-size: 1rem;
-          color: #777;
-        }
-      }
-  
-      .stats {
-        display: flex;
-        justify-content: space-around;
-        width: 100%;
-        padding: 10px 0;
-        list-style: none;
-        font-size: 1.4rem;
-        margin-bottom: -10px;
-      }
-      .labels{
-        display: flex;
-        justify-content: space-around;
-        width: 100%;
-        padding: 10px 0;
-        list-style: none;
-        font-size: 0.8rem;
-        color: #777;
-      }
-    }
+
+
   }
-  
+}
